# twitter-clone

./: README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.node.yml  docker-compose.yml
.github/workflows/: e2e.yml  playwright.yml
be/: Cargo.toml
docker/db/: postgresql.conf
docker/db/init/: 0_init.sql
docker/db/node-init/: 0_init.sql
docker/db/rust-init/: 0_init.sql
fe/: .env.example  Dockerfile  Dockerfile.ci  package-lock.json  package.json  playwright.config.ts
fe/.github/workflows/: playwright.yml
fe/src/: hooks.ts
fe/src/lib/: ApiError.ts  Tweet.ts  store.ts  user.ts  variables.ts
fe/src/routes/: Login.svelte  Register.svelte  UserHome.svelte  [userId].svelte  [userId].ts  index.svelte
fe/src/routes/[userId]/: [tweetId].svelte  [tweetId].ts
fe/tests/: test.ts
node/: .env.sample  README.md  app.js  config.js  package-lock.json  package.json
node/routes/: quotes.js
node/services/: quotes.js
rust/: Cargo.toml  Dockerfile  Rocket.toml
rust/src/: account.rs  main.rs
rust/src/lib/: cors.rs  jwt.rs  mod.rs
rust/src/model/: account.rs  api.rs  config.rs  mod.rs  tweet.rs
rust/src/service/: account.rs  auth.rs  cors.rs  mod.rs  tweet.rs
