[package]
edition = "2021"
name = "be"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
rocket = "0.5.0-rc.2"
# serde = "1.0.137"

# [dependencies.rocket_db_pools]
# version = "0.1.0-rc2"
# features = ["sqlx_postgres"]
