[package]
edition = "2021"
name = "rust-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
postgres = "0.19.1"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rocket_db_pools = {version = "0.1.0-rc.2", features = ["sqlx_postgres"]}
sqlx = {version = "0.5", default-features = false, features = ["chrono"]}
